--- a/docs/thesis/main.tex
+++ b/docs/thesis/main.tex
@@ -158,10 +158,10 @@
 	  				\textbf{Name} & John-John Markstedt \\
 	  				\textbf{Cinnober Supervisor} & Oskar Janson \\
 	  				\textbf{University Supervisor} & Jerry Eriksson \\
-	  				\textbf{Examinator} & Henrik Björklund \\
+	  				\textbf{Examinor} & Henrik Björklund \\
 	  			\end{tabular}
 	  			\vfill
-	  			\vfill			
+	  			\vfill
 	  		\end{large}
 	  		
 	  	\end{center}
