--- a/docs/thesis/results.tex
+++ b/docs/thesis/results.tex
@@ -14,6 +14,17 @@ Every simulation is run ten times and the mean and standard deviation($\sigma$) 
 	\hspace*{2mm} 
 \end{figure}
 
+\begin{figure}[!htb]
+	\hspace*{-1cm}\ 
+	\centering
+	\includegraphics[width=9cm]{images/histories_deviation_fund.png}
+	\caption{ ...
+	}
+	\label{fig:fee_curve}
+	\hspace*{2mm} 
+\end{figure}
+
+
 (preferential attachment)
 
 (pricing)
