--- a/docs/thesis/evaluation.tex
+++ b/docs/thesis/evaluation.tex
@@ -40,10 +40,6 @@ It may be unusual to view demand through the usage of its medium, their is of co
 
 The cost of procuring a shortest path between s and d might not be equal for two different routing nodes dependent on already existing paths and set strategies. The viability of a strategy is in essence determined in its ability to be included in shortest paths between nodes.
 
-\section{Price floor}
-
-The fee price, assuming rational actors, can only fall to a level where the operators are able to sustain their operation. The fees received must compensate for the \textit{time-value-of-money}, the security risk of having liquidity on a connected public node and the operational cost of running and managing the software. Bhatia has proposed a standardized reference rate as Lightning Network Reference Rate(LNRR) similar to LIBOR, OIS and SOFR~\cite{bhatia:time:value}. Operational cost isn't included in LNRR as with managed funds a  operational fee is removed after the returns are calculated. 
-
 \section{Routing strategies under Game Theory}
 
 There are clearly marked dynamics at play here. Node operator have many different options at their disposal and although all actors may not be rational their behavior should approximate the behavior of maximizing profit. In economic theory optional behaviors as an \textit{agenda field} and the iterable process of finding the maxima as climbing the \textit{maximand hill} with an equilibrium lay at the top~\cite{boulding:evolutionary:economy}. Further each actor's profit depends on every other actor's behavior reasonable to regard it as a Game Theoretic problem. More exactly it resembles a subset of Game Theory similar to that of biological ecosystems first studied by W. D. Hamilton~\cite{hamilton:behavior} and later expanded to a rigorous framework by J.M Smith et al.~\cite{smith:price:logic:animal, smith:evolution:games} as Evolutionary Game Theory (EGT).
@@ -66,12 +62,19 @@ To evaluate strategies, the game is divided into five categories.
 Most categories are quite distinct and natural to separate but there is some ambiguity here. Preferential Attachment could very well be considered as the same category but are kept apart to keep the complexity down. Each routing node may then choose a strategy per category, it is sufficient to only consider pure strategies. Mixing of strategies, e.g behaving 'aggressive' 70\% of the time and 'coy' 30\% of the time, is perfectly reasonable to assume. However convergence to a mixture is equivalent to the population mixture of pure strategies. Any equilibrium with only pure strategies could thus be transposed in to a mixed strategy~\cite{easly:kleinberg:network:crowds:markets}. This conveniently reduces the complexity of the simulation without compromising the results. 
 
 
-
-
 It should be noted that profit may not be the only parameter worth maximizing as privacy can be increased with a behavior deviating from a strictly most profitable action.   
 
 does any channel opening algorithm perform better than another and essentially force the network into a scale free hub-spoke network instead of a mesh network?
 
+\section{Fee floor}
+
+The fee price, assuming rational actors, can only fall to a level where the operators are able to sustain their operation. The fees received must compensate for the \textit{time-value-of-money}, the security risk of having liquidity on a connected public node and the operational cost of running and managing the software. Bhatia has proposed a standardized reference rate as Lightning Network Reference Rate(LNRR) similar to LIBOR, OIS and SOFR~\cite{bhatia:time:value}. Operational cost isn't included in LNRR as with managed funds a  operational fee is removed after the returns are calculated. The competition of fees drives down the price until a certain point, a floor, where there is better returns elsewhere. Therefor a the fee has a floor at
+
+\[ F_{floor} = C_{op} + C_{risk-prem} + C_{risk-free-rent} \]
+
+Note that the operational costs are independent of liquidity while the security risk premium and risk-free-returns are dependent.
+
+\subsection{risk}
 
 \newpage
 \onecolumn
@@ -250,7 +253,7 @@ Such a graph follows the scale free property with a $\gamma_{ba}$ = 2.9 and can 
 	\hspace*{2mm} 
 \end{figure}
 
-modified barabasi
+%modified barabasi
 
 The actual degree distribution of the lightning network can be seen in Figure \ref{fig:real_network}.
 
