--- a/docs/thesis/abstract.tex
+++ b/docs/thesis/abstract.tex
@@ -9,12 +9,4 @@ funding akin to Game Theodoric models. Further assuming rational actors and stra
 proportional to population suggest similar methodology to Evolutionary Game Theory where
 a strategy's fitness will emerge as a fraction of population size.
 		
-A simulation study was performed where strategies were played against 
-each other to find emergent equilibria under competitive market pressure. Were such
-equilibrium may lie have further consequences for the network in form
-of total throughput, routing cost and robustness. This study suggest 
-... strategies and a robust network topology with short average paths 
-will emerge from free competition.
-		 
-	
-	
+A simulation study was performed where strategies were played against each other to find emergent equilibria under competitive market pressure. Were such equilibrium may lie have further consequences for the network in form of total throughput, routing cost and robustness. This study suggest ... strategies and a robust network topology with short average paths will emerge from free competition.
