--- a/docs/thesis/references.bib
+++ b/docs/thesis/references.bib
@@ -176,7 +176,7 @@
 	},	
 }
 
-@mist{
+@misc{
 	gold:reserve:act,
 	author = {Roosevelt, Franklin D.},
 	title = "The Gold Reserve Act",
@@ -210,7 +210,7 @@
 }
 
 @misc{nakamoto:post:deflation,
-	author = {nakamoto, Satoshi},
+	author = {Nakamoto, Satoshi},
 	title = {bitcointalk.org topic 57 \#415},
 	year = "2010",
 	ahowpublished = {
@@ -375,7 +375,7 @@ TOR, reverse govern-print mention
 	ahowpublished = {
 		\url{https://github.com/bitcoin/bitcoin/commit/a30b56ebe76ffff9f9cc8a6667186179413c6349}
 	},
-	howpublished = {bitcoin commit a30b56ebe76ffff9f9cc8a6667186179413c6349}
+	howpublished = {bitcoin commit a30b56ebe76ffff9f9cc8a6667186179413c6349},
 	anote = {\\(Accessed on 2019-02-19)}
 }
 
@@ -384,9 +384,9 @@ TOR, reverse govern-print mention
 	author = {Nakamoto, Satoshi},
 	title = {only accept transactions sent by IP address if -allowreceivebyip is s…},
 	ahowpublished = {
-	\url{https://github.com/bitcoin/bitcoin/commit/172f006020965ae8763a0610845c051ed1e3b522}
+		\url{https://github.com/bitcoin/bitcoin/commit/172f006020965ae8763a0610845c051ed1e3b522}
 	},
-		howpublished = {bitcoin commit 172f006020965ae8763a0610845c051ed1e3b522}
+	howpublished = {bitcoin commit 172f006020965ae8763a0610845c051ed1e3b522},
 	anote = {\\(Accessed on 2019-02-19)}
 }
 
@@ -557,7 +557,7 @@ TOR, reverse govern-print mention
 	day = "22",
 	ahowpublished = {
 		\url{https://github.com/bitcoin/bips/blob/master/bip-0101.mediawiki}},
-	note = {\\(Accessed on 2019-02-19)},
+	anote = {\\(Accessed on 2019-02-19)},
 }
 
 @misc{bip:0102:increase:2mb,
@@ -857,7 +857,7 @@ year = "",
 	day = "15", 
 	month = "October",
 	year = "1999",
-	page = "509-512",
+	pages = "509-512",
 	howpublished = {
 		\url{http://barabasi.com/f/67.pdf}
 	}
@@ -897,6 +897,29 @@ year = "",
 	}
 }
 
+@article{
+	hassan:islam:haque:mediation,
+	author = {Hassan, Kamrul and Islam, Liana and Arefinul Haque, Syed},
+	title = "Degree distribution, rank-size distribution, and leadership
+	persistence in mediation-driven attachment networks",
+	year = "2017",
+	journal = "Physica A",
+	volume = "469",
+	pages = "23-30"
+}
+
+@article{
+	bianconi:barabasi:fitness:network,
+	author = {Ginestra Bianconi and Albert-László Barabási},
+	title = {Competition and multiscaling in evolving networks},
+	year = "2001",
+	month = "March",
+	journal = "Europhysics letters",
+	volume = "54",
+	pages = "436-442"
+}
+
+
 @misc{
 	repository:gephi,
 	author = {},
@@ -911,9 +934,9 @@ year = "",
 	author = { Freeman, Linton C. },
 	title = "A Set of Measures of Centrality Based on Betweenness",
 	journal = "Sociometry",
-	vol = "40",
+	volume = "40",
 	No = "1",
-	page = "35-41",
+	pages = "35-41",
 	month = "Mars",
 	year = "1977",
 	howpublished = {
@@ -950,9 +973,9 @@ year = "",
 	author = { Johnson, Donald B. },
 	title = "Efficient algorithms for shortest paths in sparse networks",
 	journal = "Journal of the Association for Computing Machinery",
-	vol = "24",
+	volume = "24",
 	No = "1",
-	page = "1-13",
+	pages = "1-13",
 	month = "January",
 	year = "1977",
 	howpublished = {
@@ -980,7 +1003,9 @@ year = "",
 	hamilton:behavior,
 	author = { Hamilton, William D. },   
 	title = { The Genetical Evolution of Social Behaviour. I },
-	publisher = {},
+	journal = {Journal of Theoretical Biology},
+	volume = {7},
+	pages = "1-16",
 	month = {February},
 	year = {1964},
 	note = { },
@@ -1004,7 +1029,8 @@ year = "",
 	author = {Smith, John M. and Price, G.R.},   
 	title = {The Logic of Animal Conflict},
 	journal = { Nature },
-	vol = {246},
+	volume = {246},
+	pages = "15-18",
 	day = {2},
 	month = {November},
 	year = {1973},
@@ -1019,8 +1045,8 @@ year = "",
 	author = {Nash JR, John F.},   
 	title = {Equilibrium points in N-person games},
 	journal = { Proceedings of the National Academy of Sciences  },
-	vol = {36},
-	page = {48-49},
+	volume = {36},
+	pages = {48-49},
 	year = {1950},
 	howpublished = {
 		\url{https://www.ncbi.nlm.nih.gov/pmc/articles/PMC1063129/pdf/pnas01550-0057.pdf}
